--- a/app/.env.example
+++ b/app/.env.example
@@ -19,12 +19,23 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
+# ------------------------------
+# database
+# ------------------------------
 DB_CONNECTION=sqlite
 DB_HOST=localhost
 # DB_PORT=3306
 # DB_DATABASE=database.sqlite
 DB_USERNAME=root
 DB_PASSWORD=
+
+# ------------------------------
+# meilisearch
+# ------------------------------
+SCOUT_DRIVER=meilisearch
+# Use the host below if you're running Meilisearch via Laravel Sail
+MEILISEARCH_HOST=http://localhost:7700
+MEILISEARCH_KEY=masterKey
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
